# AgentAI

./: .gitignore  README.md  pyproject.toml
agentai/: agent.py  eval.py  example_trajectory1.txt  example_trajectory2.txt  generated_code.py  main.old.py  main.py  main2.py  prepare_lamma_factory_data.py  prepare_task_complete.py  prompts.py  pydantic.ipynb  test.py  utils.py
agentai/inference_configs/: llama3.1_lora_sft_service_catalog_tasks_4_sub_tasks.yaml  llama3.1_lora_sft_service_catalog_tasks_4_sub_tasks_4_seeds.yaml  llama3_lora_sft.yaml
agentai/models/: __init__.py  gemini.py  lamma_factory_vllm.py  lite_llm.py  llm_model.py
agentai/notebooks/: pydantic.ipynb  vllm.ipynb
agentai/prompts/: __init__.py  prompt_definitions.py  prompts.py  prompts_basic.py  utils.py
agentai/sft/: prepare_training_data.py
agentai/slrum_jobs/: run_inference.sh  run_inference_service_catalog_tasks_4_sub_tasks.sh  run_inference_service_catalog_tasks_4_sub_tasks_4_seeds.sh  run_train.sh  run_train2.sh
agentai/train_configs/: hubspot_agent.yaml  hubspot_lamma3.1_8b_agent_config.yaml  llama3.1_lora_sft.yaml  llama3.1_lora_sft_service_catalog.yaml
agentai/train_configs/hubspot_lamma3.1_8b/: agent_config.yaml
